--- a/event/app/views/dm_event/admin/workshops/edit_system_email.html.erb
+++ b/event/app/views/dm_event/admin/workshops/edit_system_email.html.erb
@@ -1,6 +1,7 @@
 <% content_for :content_title, "#{@system_email.email_type.capitalize} Email <small>#{@workshop.title}</small>".html_safe %>
+<%= render partial: 'header_menu' %>
+
 <% content_for :sidebar do %>
-  <%= render :partial => 'configuration_sidebar' %>
 
   <div class="block outer" style="padding: 10px;">
     <p class="explanation">You can place special variables in the email, such as the registrants name or the payment instructions.  The
@@ -22,33 +23,39 @@
   </div>
 <% end %>
 
-<% case @system_email.email_type %>
-  <% when 'pending' %>
-    <p class="explanation">When someone registers for an event, you can decide whether they automatically get "accepted" &mdash; 
-      meaning they actually have a seat reserved &mdash; or they can be placed in "pending", which means 
-      their registration must first be reviewed and accepted.</p>
-  <% when 'accepted' %>
-    <p class="explanation">When you either accept a registration, or you did not require the registration to be reviewed, 
-      this is the state the registration will be in.  It indicates the person has a reserved seat in
-      the event/course.</p>
-    <p class="explanation">The email should include any event specific information, including any payment details, 
-      special timings, directions, special instructions, etc.</p>
-  <% when 'paid'%>
-    <p>Once the registration has been marked paid, this email will get sent to them.  If it's left empty, no email will be sent.</p>
-  <% when 'waitlisted' %>
-    <p class="explanation">If the event becomes full, you can place someone on the waitlist.</p>
-  <% when 'rejected' %>
-    <p class="explanation">If you reject the registration, this email will get sent to them.  If it's left empty, no email will be sent.
-      You should then notify as you see fit.</p>
+<%= panel header: false do %>
+  <div class="callout callout-info">
+  <% case @system_email.email_type %>
+    <% when 'pending' %>
+      <p>When someone registers for an event, you can decide whether they automatically get "accepted" &mdash; 
+        meaning they actually have a seat reserved &mdash; or they can be placed in "pending", which means 
+        their registration must first be reviewed and accepted.</p>
+    <% when 'accepted' %>
+      <p class="explanation">When you either accept a registration, or you did not require the registration to be reviewed, 
+        this is the state the registration will be in.  It indicates the person has a reserved seat in
+        the event/course.</p>
+      <p class="explanation">The email should include any event specific information, including any payment details, 
+        special timings, directions, special instructions, etc.</p>
+    <% when 'paid'%>
+      <p>Once the registration has been marked paid, this email will get sent to them.  If it's left empty, no email will be sent.</p>
+    <% when 'waitlisted' %>
+      <p class="explanation">If the event becomes full, you can place someone on the waitlist.</p>
+    <% when 'rejected' %>
+      <p class="explanation">If you reject the registration, this email will get sent to them.  If it's left empty, no email will be sent.
+        You should then notify as you see fit.</p>
+  <% end %>
+</div>
+
+  <% submit_url = edit_system_email_admin_workshop_path(@workshop, @system_email.email_type) %>
+  <%= simple_form_for @system_email, url: submit_url,
+        html: { class: 'form-horizontal' }, wrapper: :bs3_horizontal_form, wrapper_mappings: DmAdmin::FormWrapperMappings do |f| %>
+
+    <%= f.error_notification message: "Please review the problems below" %>
+    <%= locale_tabs title: '' do |locale| %>
+      <%= f.input "subject_#{locale}", label: 'Email Subject', id: 'title_error', required: true %>
+      <%= f.input "body_#{locale}", label: 'Email Body', hint: 'Markdown format', wrapper: :bs3_vertical_form, as: :code_editor, input_html: {style: "height: 200px;"} %>
+    <% end %>
+
+    <%= submit_or_cancel cancel_url: admin_workshop_path(@workshop) %>
+  <% end %>
 <% end %>
-
-<% submit_url = edit_system_email_admin_workshop_path(@workshop, @system_email.email_type) %>
-<%= simple_form_for(@system_email, :url => submit_url) do |f| %>
-  <%= f.error_notification :message => "Please review the problems below"%>
-  <%= locale_frame :title => '' do |locale| %>
-    <%= f.input "subject_#{locale}", :label => 'Email Subject', :id => 'title_error', :required => true %>
-    <%= f.input "body_#{locale}", :label => 'Email Body', :hint => 'Markdown format', :wrapper => :vertical, :as => :text_full_width, :mono => true, :rows => 4 %>
-  <% end %>
-
-  <%= submit_or_cancel :cancel_url => admin_workshop_path(@workshop) %>
-  <% end %>
