--- a/event/app/views/dm_event/admin/workshops/index.html.erb
+++ b/event/app/views/dm_event/admin/workshops/index.html.erb
@@ -1,86 +1,89 @@
 <% content_for :content_title, 'Workshop Dashboard' %>
 <% content_for :content_title_extra do %>
-  <div class='navbar'><ul class='nav pull-right'>
-    <li><%= link_to(icon_label('icon-plus', 'New'), new_admin_workshop_path, :title => 'New Workshop', :class => "nav-btn-primary") %></li>
-  </ul></div>
+  <%= page_header_buttons do %>
+    <%= link_to(icon_label('icon-plus', 'New'), new_admin_workshop_path, title: 'New Workshop', class: "btn btn-xs btn-default") %>
+  <% end %>
 <% end %>
 
 <% @workshops.in_groups_of(2, false) do |workshop_row| %>
-  <div class="row-fluid">
+  <div class="row">
     <% for workshop in workshop_row  %>
-      <% toolbar = nav_bar_items([ present(workshop).label_published ]) %>
-      <%= content_box title: link_to(workshop.title, [:admin, workshop]), toolbar: toolbar, class: 'span6' do %>
-        <% financials = workshop.financial_details(:summary) %>
-        <ul class="text-stats-content">
-            <li><%= financials[:summary][:total_possible].format(:no_cents_if_whole => true) %><span>best</span></li>
-            <li><%= financials[:summary][:total_possible_worst].format(:no_cents_if_whole => true) %><span>worst (80%)</span></li>
-            <li style="color:green"><%= financials[:summary][:total_paid].format(:no_cents_if_whole => true) %><span>paid</span></li>
-        </ul>
-        <div class="separator-reflected" style="margin: 10px 0px;"></div>
-        <% num_registrations = workshop.registrations.count %>
-        <ul class="block progress-statistics">
-          <% num = workshop.registrations.number_of(:attending) %>
-          <li><%= slim_progress_bar(label: 'Attending', value: "#{num} / #{num.percent_of(num_registrations).to_s}%", color: 'success', percentage: num.percent_of(num_registrations)) %></li>
-        </ul>
-        <div class="row-fluid">
-          <div class="span6">
-            <div class="block well progress-statistics">
-              <div class="body">
-                <% num = workshop.registrations.number_of(:accepted) %>
-                <%= slim_progress_bar(label: 'Accepted', value: "#{num}", color: 'accepted', percentage: num.percent_of(num_registrations)) %>
-                <% num = workshop.registrations.number_of(:paid) %>
-                <div class="semi-block">
-                  <%= slim_progress_bar(label: 'Paid', value: "#{num}", color: 'paid', percentage: num.percent_of(num_registrations)) %>
-                </div>
-                <% num = workshop.registrations.number_of(:pending) %>
-                <div class="semi-block">
-                  <%= slim_progress_bar(label: 'Pending', value: "#{num}", color: 'pending', percentage: num.percent_of(num_registrations)) %>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="span6">
-            <div class="block well progress-statistics">
-              <div class="body">
-                <% num = workshop.registrations.number_of(:waitlisted) %>
-                <%= slim_progress_bar(label: 'Waitlisted', value: "#{num}", color: 'waitlisted', percentage: num.percent_of(num_registrations)) %>
-                <% num = workshop.registrations.number_of(:reviewing) %>
-                <div class="semi-block">
-                  <%= slim_progress_bar(label: 'Reviewing', value: "#{num}", color: 'reviewing', percentage: num.percent_of(num_registrations)) %>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        
+      <% toolbar = capture do %>
+        <% present(workshop).label_published %>
       <% end %>
+      <div class="col-md-6">
+        <%= panel title: link_to(workshop.title, [:admin, workshop]), toolbar: toolbar do %>
+          <% financials = workshop.financial_details(:summary) %>
+          <ul class="statistics">
+            <li><%= stat_block_small label: 'Best', number: financials[:summary][:total_possible].format(no_cents_if_whole: true), color_type: :info, icon: 'icon-coin', percent: 100 %></li>
+            <li><%= stat_block_small label: 'Worst (80%)', number: financials[:summary][:total_possible_worst].format(no_cents_if_whole: true), color_type: :warning, icon: 'icon-coin', percent: 80 %></li>
+            <li><%= stat_block_small label: 'Paid', number: financials[:summary][:total_paid].format(no_cents_if_whole: true), color_type: :success, icon: 'icon-coin', percent: financials[:summary][:total_paid_percent] %></li>
+          </ul>
+          
+          <div class="separator-reflected" style="margin: 10px 0px;"></div>
+          <% num_registrations = workshop.registrations.count %>
+          <div class="block progress-statistics">
+            <% num = workshop.registrations.number_of(:attending) %>
+            <%= slim_progress_bar(label: 'Attending', value: "#{num} / #{num.percent_of(num_registrations).to_s}%", color: 'success', percentage: num.percent_of(num_registrations)) %>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="block well progress-statistics">
+                <div class="body">
+                  <% num = workshop.registrations.number_of(:accepted) %>
+                  <%= slim_progress_bar(label: 'Accepted', value: "#{num}", color: 'accepted', percentage: num.percent_of(num_registrations)) %>
+                  <% num = workshop.registrations.number_of(:paid) %>
+                  <div class="semi-block">
+                    <%= slim_progress_bar(label: 'Paid', value: "#{num}", color: 'paid', percentage: num.percent_of(num_registrations)) %>
+                  </div>
+                  <% num = workshop.registrations.number_of(:pending) %>
+                  <div class="semi-block">
+                    <%= slim_progress_bar(label: 'Pending', value: "#{num}", color: 'pending', percentage: num.percent_of(num_registrations)) %>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="block well progress-statistics">
+                <div class="body">
+                  <% num = workshop.registrations.number_of(:waitlisted) %>
+                  <%= slim_progress_bar(label: 'Waitlisted', value: "#{num}", color: 'waitlisted', percentage: num.percent_of(num_registrations)) %>
+                  <% num = workshop.registrations.number_of(:reviewing) %>
+                  <div class="semi-block">
+                    <%= slim_progress_bar(label: 'Reviewing', value: "#{num}", color: 'reviewing', percentage: num.percent_of(num_registrations)) %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+        <% end %>
+      </div>
     <% end %>
   </div>
 <% end %>
 
 <% unless @workshops_past.empty? %>
-  <%= content_frame :title => 'Past Workshops' do %>
-    <div class="table-overflow">
-      <table class="table table-striped table-bordered table-block">
-        <thead>
-          <tr>
-            <th>Title</th>
-            <th width="150">Date</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @workshops_past.each do |workshop| %>
-            <% present workshop do |workshop_presenter| %>
-              <tr class="item" data-item_id="<%= workshop.id %>">
-                <td>
-                  <%= link_to workshop.title, [:admin, workshop] %>
-                </td>
-                <td><%= workshop_presenter.start_end_date %></td>
-              </tr>
-            <% end %>
+  <%= panel title: 'Past Workshops' do %>
+    <table class="table table-striped table-bordered table-block">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th width="150">Date</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @workshops_past.each do |workshop| %>
+          <% present workshop do |workshop_presenter| %>
+            <tr class="item" data-item_id="<%= workshop.id %>">
+              <td>
+                <%= link_to workshop.title, [:admin, workshop] %>
+              </td>
+              <td><%= workshop_presenter.start_end_date %></td>
+            </tr>
           <% end %>
-        </tbody>
-      </table>
-    </div>
+        <% end %>
+      </tbody>
+    </table>
   <% end %>
 <% end %>
