--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -1,38 +1,38 @@
 <% content_for :content_title, "#{@workshop.title}" %>
 <% content_for :content_title_extra do %>
-  <div class='navbar'>
-    <ul class='nav pull-right'>
-      <li><%= present(@workshop).label_published %></li>
-      <li><%= link_to(icon_label('icon-edit', 'Edit'), edit_admin_workshop_url(@workshop), :title => 'Edit Workshop', :class => "nav-btn-primary") %></li>
-    </ul>
+  <%= page_header_buttons do %>
+    <%= present(@workshop).label_published %>
+    <%= link_to(icon_label('icon-edit', 'Edit'), edit_admin_workshop_url(@workshop), title: 'Edit Workshop', class: "btn btn-xs btn-default") %>
+  <% end %>
+<% end %>
+
+<div class="row">
+  <div class="col-md-9">
+    <% toolbar = toolbar_btn(icon_label('icon-plus', 'New'), register_new_url(@workshop), target: '_blank', title: 'New Registration', class: "btn btn-xs btn-default") %>
+    <%= panel title: 'Registrations', toolbar: toolbar, body: false do %>
+      <table id="registration_table" class="table table-striped table-bordered" data-source="<%= dm_event.admin_workshop_url(@workshop) %>">
+        <thead>
+          <tr>
+            <th width=20></th>
+            <th width=50>Receipt</th>
+            <th>Name</th>
+            <th width=25>Balance</th>
+            <th width=85>Registered</th>
+            <th width=85>Last Login</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    <% end %>
   </div>
-<% end %>
 
-<% toolbar = nav_bar_items([ link_to(icon_label('icon-plus', 'New'), register_new_url(@workshop), :target => '_blank', :title => 'New Registration', :class => "nav-btn-primary") ]) %>
-<%= content_frame :title => 'Registrations', :toolbar => toolbar do %>
-  <div class="table-overflow">
-    <table id="registration_table" class="table table-striped table-bordered table-block" data-source="<%= dm_event.admin_workshop_url(@workshop) %>">
-      <thead>
-        <tr>
-          <th width=20></th>
-          <th width=50>Receipt</th>
-          <th>Name</th>
-          <th width=25>Balance</th>
-          <th width=85>Registered</th>
-          <th width=85>Last Login</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
+  <div class="col-md-3">
+    <%= panel header: false do %>
+      <%= render partial: 'registration_stats', locals: {workshop: @workshop} %>
+
+      <%= link_to 'Export Registrations (.csv)', admin_workshop_url(@workshop, format: 'csv'), class: "action-button blue" %>
+    <% end %>
   </div>
-<% end %>
-
-<% content_for :sidebar do %>
-  <%= render :partial => 'registration_stats', locals: {workshop: @workshop} %>
-
-  <div class="separator"></div>
-
-  <%= link_to 'Export Registrations (.csv)', admin_workshop_url(@workshop, :format => 'csv'), :class => "action-button blue" %>
-<% end %>
+</div>
 
